--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ PE html>
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="screen-0.jpg" alt="logo Programa Agrinho 2024">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
