--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <section class="escola">
         <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Sobre a Escola</h2>
+            <h2 class="escola-titulo">Sobre o cmpo e a cidade.</h2>
             <p class="escola-texto-um">A Plataforma Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
             <p class="escola-texto-dois"> O Progama Agrinho é programa que todos os anos promove uma atuação para além da estrutura tradicionalmente conhecida da sala de aula, por meio de uma proposta pedagógica que tem como princípios fundamentais a colaboração, a interdisciplinaridade, a transversalidade e a pesquisa. </p>
         </div>
