--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equipe Alura Start</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="screen-0.jpg" alt="logo Programa Agrinho 2024">
+        <img class="cabecalho-imagem" src="agrinho_500x1280-2.jpg" alt="logo Programa Agrinho 2024">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
@@ -20,7 +20,7 @@
     </header>
     <section class="escola">
         <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Sobre o cmpo e a cidade.</h2>
+            <h2 class="escola-titulo">Sobre o campo e a cidade.</h2>
             <p class="escola-texto-um">A Plataforma Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
             <p class="escola-texto-dois"> O Progama Agrinho é programa que todos os anos promove uma atuação para além da estrutura tradicionalmente conhecida da sala de aula, por meio de uma proposta pedagógica que tem como princípios fundamentais a colaboração, a interdisciplinaridade, a transversalidade e a pesquisa. </p>
         </div>
