--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p class="escola-texto-um">A Plataforma Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
             <p class="escola-texto-dois"> O Progama Agrinho é programa que todos os anos promove uma atuação para além da estrutura tradicionalmente conhecida da sala de aula, por meio de uma proposta pedagógica que tem como princípios fundamentais a colaboração, a interdisciplinaridade, a transversalidade e a pesquisa. </p>
         </div>
-        <img class="escola-imagem" src="76694917fb981a7fa4dd4759969c7d60 (1).webp" alt="imagem que representa o campo e a cidade">
+        <img class="escola-imagem" src="agrinho.webp" alt="imagem que representa o campo e a cidade">
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
