--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-<html 
-    lang="en">
+ <!DOCTYPE html>
+    <html>
+    <head>
+        <link rel="Stylesheet" href="Styles.css">
+        <link rel="Stylesheet" href="link.ccs">
+    </head>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equipe Alura Start</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -22,12 +26,14 @@
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre o campo e a cidade.</h2>
             <p class="escola-texto-um">A Plataforma Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
-            <p class="escola-texto-dois"> O Progama Agrinho é programa que todos os anos promove uma atuação para além da estrutura tradicionalmente conhecida da sala de aula, por meio de uma proposta pedagógica que tem como princípios fundamentais a colaboração, a interdisciplinaridade, a transversalidade e a pesquisa. </p>
+            <p class="escola-texto-dois"> O Progama Agrinho é programa que todos os anos promove uma atuação para além da estrutura tradicionalmente conhecida da sala de aula, por meio de uma proposta pedagógica que tem como princípios fundamentais a colaboração, a interdisciplinaridade, a transversalidade e a pesquisa.  </p>
+            <p class="escola-texto-tres">  Atualmente podemos perceber como a tecnologia vem crescendo escessivamente, que facilita o trabalho dos agricultores através de sistemas integrados, software, drones e computadores. Enquanto o campo oferece tranquilidade e contato com a natureza, a cidade proporciona conveniência e acesso a uma vasta gama de serviços e oportunidades.
         </div>
         <img class="escola-imagem" src="agrinho.webp" alt="imagem que representa o campo e a cidade">
     </section>
     <section class="estudante">
-        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+        <h2 class="estudante-titulo">Como é a Tecnologia no Campo?</h2>
+        <p class="escola-texto-um"> 
         <div class="estudante-todos">
        
      
