--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="estudante">
         <div class="estudante-titulo">
         <h2 class="estudante-titulo">Como é a Tecnologia no Campo?</h2>
-        <p class="escola-texto-um"> 
+        <p class="escola-texto-um"> Atualmente podemos perceber como a tecnologia vem crescendo.
         <p class="escola-texto-dois">
         </div>
          <img class="escola-imagem" src="campo.jpeg" alt="imagem que representa o campo">
