--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="agrinho_500x1280-2.jpg" alt="logo Programa Agrinho 2024">
+        <img class="cabecalho-imagem" src="agrinho imagem.jpeg" alt="logo Programa Agrinho 2024">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
@@ -34,7 +34,7 @@
     <section class="estudante">
         <div class="estudante-titulo">
         <h2 class="estudante-titulo">Como é a Tecnologia no Campo?</h2>
-        <p class="escola-texto-um"> Atualmente podemos perceber como a tecnologia vem crescendo.
+        <p class="escola-texto-um"> Atualmente podemos perceber como a tecnologia vem crescendo escessivamente, que facilita o trabalho dos agricultores através de sistemas integrados, software, drones e computadores. Segundo o IBGE o acesso na área rural almentou de 57,8% para 74,7% entre 2019 e 2021, as tecnologias tem almentado, fazendo com que seja possível produzir em abundância, que favorece o mercado interno e externo.
         <p class="escola-texto-dois">
         </div>
          <img class="escola-imagem" src="campo.jpeg" alt="imagem que representa o campo">
