--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
  <!DOCTYPE html>
     <html>
     <head>
-        <link rel="Stylesheet" href="Styles.css">
-        <link rel="Stylesheet" href="link.ccs">
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="link.ccs">
     </head>
 <head>
     <meta charset="UTF-8">
@@ -18,8 +18,8 @@
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="agrinho imagem.jpeg" alt="logo Programa Agrinho 2024">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Escola</li>
-            <li class="cabecalho-lista-item">Estudante</li>
+            <li class="cabecalho-lista-item">Escola Colégio Estadual de Iporã</li>
+            <li class="cabecalho-lista-item"> </li>
         </ul>
     </header>
     <section class="escola">
@@ -35,9 +35,8 @@
         <div class="estudante-titulo">
         <h2 class="estudante-titulo">Como é a Tecnologia no Campo?</h2>
         <p class="escola-texto-um"> Atualmente podemos perceber como a tecnologia vem crescendo escessivamente, que facilita o trabalho dos agricultores através de sistemas integrados, software, drones e computadores. Segundo o IBGE o acesso na área rural almentou de 57,8% para 74,7% entre 2019 e 2021, as tecnologias tem almentado, fazendo com que seja possível produzir em abundância, que favorece o mercado interno e externo.
-        <p class="escola-texto-dois">
         </div>
-         <img class="escola-imagem" src="campo.jpeg" alt="imagem que representa o campo">
+         <img class="site-imagem" src="campo.jpeg" alt="imagem que representa o campo">
     </section>
      
 
